fix: body overflow-x 수정

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,9 +10,12 @@ html {
 }
 body {
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
+  min-width: 100vw;
   min-height: 100vh;
 }
 div#__next {
+  width: 100vw;
   height: 100vh;
   overflow: hidden;
 }
